--- a/src/css/facilities.less
+++ b/src/css/facilities.less
@@ -1,5 +1,5 @@
 body.facilities {
-	padding-top: 4em;
+	padding-top: 4.9em;
 	strong {
 		color: @yell-lt;
 	}
@@ -61,10 +61,11 @@ body.facilities {
 			}
 		}
 	}
-	@media (min-width: @screen-sm) {
-		padding-top: 10em;
+	@media (min-width: @screen-sm) and (max-width: @screen-md) {
+		padding-top: 9em;
 	}
 	@media (min-width: @screen-md) {
+		padding-top: 6em;
 		.side {
 			padding-top: 4em;
 		}
