--- a/src/css/freetrial.less
+++ b/src/css/freetrial.less
@@ -1,6 +1,6 @@
 // Free trial page
 .freetrial {
-	font-size: 1.9em;
+	padding-top: 4em;
 	background-color: @yell-lt;
 	h1 {
 		text-transform: uppercase;
@@ -30,5 +30,11 @@
 				}
 			}
 		}
+	}
+	@media (min-width: @screen-sm) and (max-width: @screen-md) {
+		padding-top: 8em;
+	}
+	@media (min-width: @screen-md) {
+		padding-top: 6em;
 	}
 }
