--- a/src/css/nav.less
+++ b/src/css/nav.less
@@ -127,14 +127,12 @@
   position: absolute;
   right: 20px;
   top: 10px;
-  // > li > a > i {
-  //   font-size: 19px;
-  // }
 }
 
 @media (max-width: @screen-sm) {
   .navbar-social {
     right: 75px;
+    top: 3px;
   }
 }
 
