--- a/src/html/pages/bjj.hbs
+++ b/src/html/pages/bjj.hbs
@@ -10,26 +10,11 @@ type: "bjj"
 <p>Our classes are run by three highly experienced coaches who have all achieved their black belts in BJJ, along with many titles including state, national and pan pacific champion, and also competing on the world stage multiple times. We dedicate our time and energy to our students, support them through competitions and tournaments, and continue to develop their skills.</p> 
 <p>Our members join for varying reasons – confidence, self defense, weight loss, hobbyist or competitor and have achieved amazing results in each of these areas. We love to see our students progress, so come give one of our classes a go and see for yourself how passionate we are about this art. </p>
 <p>Kids classes also available, see here for more info.</p>
-<div id="bjj-car" class="carousel slide" data-ride="carousel" data-interval="5000">
-	<!-- Wrapper for slides -->
-	<div class="carousel-inner" role="listbox">
-		<div class="item active">
-			<img src="https://unsplash.it/837/300?image=0" alt="">
-			<div class="carousel-caption">
-				<strong>This is another carousel</strong>
-			</div>
-		</div>
-		<div class="item">
-			<img src="https://unsplash.it/837/300?image=10" alt="">
-			<div class="carousel-caption">
-				<strong>This is a caption</strong>
-			</div>
-		</div>
-		<div class="item">
-			<img src="https://unsplash.it/837/300?image=210" alt="">
-			<div class="carousel-caption">
-				<strong>This is another caption</strong>
-			</div>
+<div id="bjjcarouselcontainer">
+	<div id="bjjCar" class="carousel slide">
+		<!-- Wrapper for slides -->
+		<div class="carousel-inner" role="listbox">
+
 		</div>
 	</div>
 </div>
