--- a/src/html/pages/faq.hbs
+++ b/src/html/pages/faq.hbs
@@ -39,24 +39,16 @@ pageid: "faq"
             </div>
             <div class="col-md-3 col-md-offset-1 images">
                 <p>
-                    <a href="#" class="thumbnail">
-                        <img src="http://lorempixel.com/300/200/" alt="...">
-                    </a>
+                    <img src="http://lorempixel.com/300/200/" class="img-responsive" alt="...">
                 </p>
                 <p>
-                    <a href="#" class="thumbnail">
-                        <img src="http://lorempixel.com/300/200/" alt="...">
-                    </a>
+                    <img src="http://lorempixel.com/300/200/" class="img-responsive" alt="...">
                 </p>
                 <p>
-                    <a href="#" class="thumbnail">
-                        <img src="http://lorempixel.com/300/200/" alt="...">
-                    </a>
+                    <img src="http://lorempixel.com/300/200/" class="img-responsive" alt="...">
                 </p>
                 <p>
-                    <a href="#" class="thumbnail">
-                        <img src="http://lorempixel.com/300/200/" alt="...">
-                    </a>
+                    <img src="http://lorempixel.com/300/200/" class="img-responsive" alt="...">
                 </p>
             </div>
         </div>
