--- a/src/html/pages/kids.hbs
+++ b/src/html/pages/kids.hbs
@@ -20,26 +20,11 @@ to compete, and we spend an equal amount of time and energy developing both.</p>
 <p>All our instructors are accredited and highly experienced coaches with complete and regular working
 with children checks.</p>
 <p>Our students love our classes, come check them out for yourselves!</p>
-<div id="kids-car" class="carousel slide" data-ride="carousel" data-interval="5000">
-	<!-- Wrapper for slides -->
-	<div class="carousel-inner" role="listbox">
-		<div class="item active">
-			<img src="https://unsplash.it/837/300?image=0" alt="">
-			<div class="carousel-caption">
-				<strong>This is another carousel</strong>
-			</div>
-		</div>
-		<div class="item">
-			<img src="https://unsplash.it/837/300?image=10" alt="">
-			<div class="carousel-caption">
-				<strong>This is a caption</strong>
-			</div>
-		</div>
-		<div class="item">
-			<img src="https://unsplash.it/837/300?image=210" alt="">
-			<div class="carousel-caption">
-				<strong>This is another caption</strong>
-			</div>
+<div id="kidscarouselcontainer">
+	<div id="kidsCar" class="carousel slide">
+		<!-- Wrapper for slides -->
+		<div class="carousel-inner" role="listbox">
+
 		</div>
 	</div>
 </div>
