--- a/src/html/pages/mma.hbs
+++ b/src/html/pages/mma.hbs
@@ -9,26 +9,11 @@ type: "mma"
 <p>As a complex sport an MMA match can end in many different ways and requires both physical skill and strategic thinking to dominate. This is what makes the sport so exciting and popular.</p>
 <p>These classes are full contact and move at pace, therefore we offer these classes only to our intermediate students or students who have trained sufficiently in martial arts. This ensures that our students have the capabilities and foundation to incorporate multiple styles into their game plan, and most importantly creates a safe environment and skill level for their training partners. Because of this, it enables us to give a lot of focus and time to honing their game strategy, technique and ability. </p>
 <p>Our coaches focus on the physical aspect, but also work to develop the mental and strategic aspect of the sport. Building you into a complete martial artist.</p>
-<div id="mma-car" class="carousel slide" data-ride="carousel" data-interval="5000">
-	<!-- Wrapper for slides -->
-	<div class="carousel-inner" role="listbox">
-		<div class="item active">
-			<img src="https://unsplash.it/837/300?image=0" alt="">
-			<div class="carousel-caption">
-				<strong>This is another carousel</strong>
-			</div>
-		</div>
-		<div class="item">
-			<img src="https://unsplash.it/837/300?image=10" alt="">
-			<div class="carousel-caption">
-				<strong>This is a caption</strong>
-			</div>
-		</div>
-		<div class="item">
-			<img src="https://unsplash.it/837/300?image=210" alt="">
-			<div class="carousel-caption">
-				<strong>This is another caption</strong>
-			</div>
+<div id="mmacarouselcontainer">
+	<div id="mmaCar" class="carousel slide">
+		<!-- Wrapper for slides -->
+		<div class="carousel-inner" role="listbox">
+
 		</div>
 	</div>
 </div>
