--- a/src/html/pages/muaythai.hbs
+++ b/src/html/pages/muaythai.hbs
@@ -10,26 +10,11 @@ type: "muaythai"
 Once students reach intermediate classes we teach full contact sparring, which is carefully monitored to ensure our students safety and skill development.</p>
 <p>Our Muay Thai head instructors are super experienced, with extensive knowledge and passion to pass on their expertise to the students.</p>
 <p>Whether you’re looking to improve your fitness, your confidence, meet new people, learn a new skill or fight professionally our classes are for you!</p>
-<div id="bjj-car" class="carousel slide" data-ride="carousel" data-interval="5000">
-	<!-- Wrapper for slides -->
-	<div class="carousel-inner" role="listbox">
-		<div class="item active">
-			<img src="https://unsplash.it/837/300?image=0" alt="">
-			<div class="carousel-caption">
-				<strong>This is another carousel</strong>
-			</div>
-		</div>
-		<div class="item">
-			<img src="https://unsplash.it/837/300?image=10" alt="">
-			<div class="carousel-caption">
-				<strong>This is a caption</strong>
-			</div>
-		</div>
-		<div class="item">
-			<img src="https://unsplash.it/837/300?image=210" alt="">
-			<div class="carousel-caption">
-				<strong>This is another caption</strong>
-			</div>
+<div id="mtcarouselcontainer">
+	<div id="mtCar" class="carousel slide">
+		<!-- Wrapper for slides -->
+		<div class="carousel-inner" role="listbox">
+
 		</div>
 	</div>
 </div>
