--- a/src/css/faq.less
+++ b/src/css/faq.less
@@ -1,5 +1,5 @@
 body.faq {
-	padding-top: 4em;
+	padding-top: 4.9em;
 	strong {
 		color: @yell-lt;
 	}
@@ -13,10 +13,11 @@ body.faq {
 		padding-bottom: 1em;
 		border: none;
 	}
-	@media (min-width: @screen-sm) {
-		padding-top: 10em;
+	@media (min-width: @screen-sm) and (max-width: @screen-md) {
+		padding-top: 9em;
 	}
 	@media (min-width: @screen-md) {
+		padding-top: 6em;
 		.images {
 			padding-top: 4em;
 		}
