--- a/src/css/timetable.less
+++ b/src/css/timetable.less
@@ -1,7 +1,7 @@
 /* Timetable */
 
 body.timetable {
-  padding-top: 4em;
+  padding-top: 4.9em;
   .timetablesGroup {
     padding-bottom: 4em;
     background-color: @blk;
@@ -19,22 +19,43 @@ body.timetable {
       background-color: @yell-lt;
       color: @blk;
     }
-    .nav a {
-      padding: 1em 2em;
-      font-weight: 900;
-      background: #000;
-      color: #fff;
-      width: 15em;
-      text-align: center;
-      border: 1px solid @white-lt;
+    .nav {
+      li {
+        margin-right: @spacer-20;
+      }
+      a {
+        padding: 1em 2em;
+        font-weight: 900;
+        background: #000;
+        color: #fff;
+        width: 100%;
+        text-align: center;
+        border: 1px solid @white-lt;
+      }
+      .active {
+        a {
+          background-color: @yell-lt;
+          color: @blk;
+          border: 1px solid @yell-lt;
+        }
+      }
     }
-    .nav .active a {
-      background-color: @yell-lt;
-      color: @blk;
-      border: 1px solid @yell-lt;
+
+    @media (min-width: @screen-sm) {
+      .nav {
+        li {
+          margin-right: 0;
+        }
+        a {
+          width: 13em;
+        }
+      }
     }
   }
-  @media (min-width: @screen-sm) {
-    padding-top: 10em;
+  @media (min-width: @screen-sm) and (max-width: @screen-md) {
+    padding-top: 9em;
+  }
+  @media (min-width: @screen-md) {
+    padding-top: 6em;
   }
 }
