--- a/src/html/pages/facilities.hbs
+++ b/src/html/pages/facilities.hbs
@@ -16,44 +16,44 @@ pageid: "facilities"
                     <div class="col-md-6">
                         <p>
                             <a href="#" class="thumbnail">
-                                <img src="http://lorempixel.com/300/200/" alt="...">
+                                <img src="http://lorempixel.com/300/200/" class="img-responsive" alt="...">
                             </a>
                         </p>
                         <p>
                             <a href="#" class="thumbnail">
-                                <img src="http://lorempixel.com/300/200/" alt="...">
+                                <img src="http://lorempixel.com/300/200/" class="img-responsive" alt="...">
                             </a>
                         </p>
                         <p>
                             <a href="#" class="thumbnail">
-                                <img src="http://lorempixel.com/300/200/" alt="...">
+                                <img src="http://lorempixel.com/300/200/" class="img-responsive" alt="...">
                             </a>
                         </p>
                         <p>
                             <a href="#" class="thumbnail">
-                                <img src="http://lorempixel.com/300/200/" alt="...">
+                                <img src="http://lorempixel.com/300/200/" class="img-responsive" alt="...">
                             </a>
                         </p>
                     </div>
                     <div class="col-md-6">
                         <p>
                             <a href="#" class="thumbnail">
-                                <img src="http://lorempixel.com/300/200/" alt="...">
+                                <img src="http://lorempixel.com/300/200/" class="img-responsive" alt="...">
                             </a>
                         </p>
                         <p>
                             <a href="#" class="thumbnail">
-                                <img src="http://lorempixel.com/300/200/" alt="...">
+                                <img src="http://lorempixel.com/300/200/" class="img-responsive" alt="...">
                             </a>
                         </p>
                         <p>
                             <a href="#" class="thumbnail">
-                                <img src="http://lorempixel.com/300/200/" alt="...">
+                                <img src="http://lorempixel.com/300/200/" class="img-responsive" alt="...">
                             </a>
                         </p>
                         <p>
                             <a href="#" class="thumbnail">
-                                <img src="http://lorempixel.com/300/200/" alt="...">
+                                <img src="http://lorempixel.com/300/200/" class="img-responsive" alt="...">
                             </a>
                         </p>
                     </div>
