--- a/src/html/pages/index.hbs
+++ b/src/html/pages/index.hbs
@@ -64,7 +64,7 @@ pageid: "home"
 <div class="line"></div>
 <section id="testimonials">
     <div class="container">
-        <div class="col-md-12 text-center">
+        <div class="col-md-12 text-center hidden-sm hidden-xs">
             <h2>Testimonials</h2>
         </div>
 
