--- a/src/html/partials/global-nav.hbs
+++ b/src/html/partials/global-nav.hbs
@@ -12,7 +12,7 @@
             <li class="visible-xs-block"><a href="tel:(02) 9887 1230"><i class="glyphicon glyphicon-phone-alt"></i>
             </a></li>
             <li class="hidden-xs"><a href="#phonenumber" class="js-smooth-link"><i class="glyphicon glyphicon-phone-alt"></i> <span class="phone hidden-md hidden-sm">(02) 9887 1230</span></a></li>
-            <li><a href="#map"><i class="glyphicon glyphicon-map-marker"></i></a></li>
+{{!--             <li><a href="#map" class="js-smooth-link"><i class="glyphicon glyphicon-map-marker"></i></a></li> --}}
         </ul>
     </div>
     <div id="collapseone" class="navbar-collapse collapse">
