--- a/src/html/partials/footer.hbs
+++ b/src/html/partials/footer.hbs
@@ -16,8 +16,8 @@
             <div class="col-md-3">
                 <h3>Follow Us</h3>
                 <p class="social">
-                    <a href=""><i class="fa fa-facebook-official" aria-hidden="true"></i></a> 
-                    <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    <a href="https://www.facebook.com/movementmartialartsaustralia/"><i class="fa fa-facebook-official" aria-hidden="true"></i></a> 
+                    <a href="https://www.instagram.com/movementmartialarts/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                 </p>
             </div>
         </div>
