--- a/src/html/pages/index.hbs
+++ b/src/html/pages/index.hbs
@@ -14,7 +14,7 @@ pageid: "home"
             <div class="col-md-12 text-center">
                 <h1 class="hidden-sm hidden-xs">Movement <span>Martial Arts</span>{{!-- <br><small>Sydney's Premier Martial Arts Gym</small> --}}</h1>
                 <div class="buttons">
-                    <a href="about.html" role="button" class="btn text-center">Learn more</a>
+                    <a href="about.html" role="button" class="btn text-center learnmore">Learn more</a>
                     <a href="freetrial.html" role="button" class="btn text-center">Free trial</a>
                 </div>
             </div>
@@ -38,24 +38,32 @@ pageid: "home"
             </div>
             <div class="row">
                 <div class="col-md-3 type">
-                    <h3>Muay Thai</h3>
-                    <p class="text-center"><img src="img/home-mtk.png" class="img-responsive"></p>
-                    <p class="btn"><a href="muaythai.html">Learn more</a></p>
+                    <a href="muaythai.html">
+                        <h3><span>Muay Thai</span></h3>
+                        <p class="text-center"><img src="img/home-mtk.png" class="img-responsive"></p>
+                        <p class="btn"><span>Learn more</span></p>
+                    </a>
                 </div>
                 <div class="col-md-3 type">
-                    <h3>BJJ</h3>
-                    <p class="text-center"><img src="img/home-bjj.png" class="img-responsive"></p>
-                    <p class="btn"><a href="bjj.html">Learn more</a></p>
+                    <a href="bjj.html">
+                        <h3><span>BJJ</span></h3>
+                        <p class="text-center"><img src="img/home-bjj.png" class="img-responsive"></p>
+                        <p class="btn"><span>Learn more</span></p>
+                    </a>
                 </div>
                 <div class="col-md-3 type">
-                    <h3>MMA</h3>
-                    <p class="text-center"><img src="img/home-mma.png" class="img-responsive"></p>
-                    <p class="btn"><a href="mma.html">Learn more</a></p>
+                    <a href="mma.html">
+                        <h3><span>MMA</span></h3>
+                        <p class="text-center"><img src="img/home-mma.png" class="img-responsive"></p>
+                        <p class="btn"><span>Learn more</spana></p>
+                        </a>
                 </div>
                 <div class="col-md-3 type">
-                    <h3>Kids</h3>
-                    <p class="text-center"><img src="img/home-kids.png" class="img-responsive"></p>
-                    <p class="btn"><a href="kids.html">Learn more</a></p>
+                    <a href="kids.html">
+                        <h3><span>Kids</span></h3>
+                        <p class="text-center"><img src="img/home-kids.png" class="img-responsive"></p>
+                        <p class="btn"><span>Learn more</span></p>
+                    </a>
                 </div>
             </div>
         </div>
