--- a/src/css/location.less
+++ b/src/css/location.less
@@ -3,12 +3,18 @@
 	padding: 50px 0 50px 0;
 	background-color: @blk-lt;
 	h2 {
+		padding-top: @spacer-50;
 		font-size: 1.5em;
 		letter-spacing: 1px;
 	}
 	.big {
-		font-size: 2em;
+		font-size: 1.4em;
 		font-weight: 700;
 		line-height: 1em;
+	}
+	@media (min-width: @screen-md) {
+		h2 {
+			padding-top: 0;
+		}
 	}
 }
